src/core/Claroline/PluginBundle/Tests/stub/plugin/Invalid/UnloadableBundleClass_2/InvalidUnloadableBundleClass_2.php
<?php

namespace UnexpectedNamespace\UnloadableBundleClass_2;

use Claroline\PluginBundle\AbstractType\ClarolinePlugin;

class InvalidUnloadableBundleClass_2
{
    /*
     * Unloadable because the class vendor namespace doesn't
     * match the bundle vendor directory
     */
}